two blog post placeholders plus a fix to display future dated blog posts and more

--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ permalink: /blog/:title/
 name: OpenNews
 description: The blog for OpenNews
 url: https://www.opennews.org
+future: true
 rdiscount:
   extensions: [smart]
 gems:
