--- a/_config.yml
+++ b/_config.yml
@@ -15,4 +15,4 @@ defaults:
       path: ""
     values:
       excerpt: ""
-      description: OpenNews connects a network of developers, designers, journalists, and editors to collaborate on open technologies and processes within journalism. OpenNews believes that a community of peers working, learning, and solving problems together can create a stronger, more responsive journalism ecosystem.
+      description: OpenNews connects a network of developers, designers, journalists, and editors to collaborate on open technologies and processes within journalism. Alongside our community, our mission includes fighting for a future where newsrooms are anti-racist, equitable, inclusive, and collaborative.
